# guile-pyffi

./: .gitignore  .gitlab-ci.yml  Makefile.am  README  README.md  README.org  autogen.sh  configure.ac  env.in
.github/workflows/: guile3.0.yml
libpyffi/: Makefile.am  pyffi.c
pyffi/: Makefile.am  interface.scm.in  pyffi.scm
tests/: Makefile.am  runner.scm  test-interface.scm  test-python-vm.scm  test-type-conversion.scm
